<resources>
    <string name="app_name">VisaoDoBem</string>
    <string name="e_mail">E-mail</string>
    <string name="logo_vis_o_do_bem">Logo Visão do Bem</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="para_quem_o">Para quem é o</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="novo_pedido">novo pedido?</string>
    <string name="cliente_j_cadastrado">Cliente já cadastrado</string>
    <string name="novo_cliente">Novo Cliente</string>
    <string name="novo">Novo </string>
    <string name="cliente">Cliente </string>
    <string name="j_cadastrado"> já cadastrado</string>
    <string name="cliente_question">Cliente?</string>
    <string name="buscar_por_nome_ou_data">Buscar por nome ou data</string>
    <string name="quem_o_a">Quem é o (a)</string>
    <string name="ltimo_pedido">Último pedido:</string>
    <string name="plus">+</string>
    <string name="cliente_desde">Cliente desde</string>
    <string name="ultimo_pedido">Ultimo Pedido: </string>
    <string name="indicada_por">Indicada por: </string>
    <string name="hist_rico">Histórico</string>
    <string name="pedido_n">Pedido nº: </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="faltam_para_a_meta_apenas">Faltam para a Meta, apenas:</string>
    <string name="valor_total">Valor Total</string>
    <string name="pedido_n_old_orders"> | Pedido Nº:</string>
    <string name="miopia">Miopia</string>
    <string name="tipos_de_lentes">Tipos de Lentes</string>
    <string name="vis_o_siples">Visão Siples</string>
    <string name="simples">Simples</string>
    <string name="surfa_ado">Surfaçado</string>
    <string name="multifocal">Multifocal</string>
    <string name="culos_de_sol">Óculos de Sol</string>
    <string name="preencha_os">Preencha os</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="whatsapp_telefone">Whatsapp / Telefone</string>
    <string name="rua">Rua</string>
    <string name="cep">CEP</string>
    <string name="n_mero">Número</string>
    <string name="complemento">Complemento</string>
    <string name="indicado_por">Indicado Por</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="dados_do_cliente">dados do Cliente</string>
    <string name="vamos_definir">Vamos definir</string>
    <string name="sua_meta">sua meta?</string>
    <string name="o_per_odo">o período</string>
    <string name="escolha">Escolha</string>
    <string name="quinzenal">Quinzenal</string>
    <string name="mensal">Mensal</string>
    <string name="trimestral">Trimestral</string>
    <string name="quanto_voc">Quanto você</string>
    <string name="deseja_ganhar_neste_per_odo">deseja Ganhar neste período?</string>

    <!--    Accredited Clinics Fragment-->
    <string name="em">EM</string>
    <string name="breve">BREVE</string>


    <!--    Information Fragment-->
    <string name="outras_informa_es">Outras Informações</string>

    <!--    Measurements Fragment-->
    <string name="measurement1">1.DNP - Distância Naso-Pupilar.</string>
    <string name="measurements2">É a distância entre a base nasal e o centro da pupila. Esta medida é essencial para centralizar o Centro Óptico da lente sobre a pupila do cliente. É importante também na surfassagem para calcular o diâmetro e espessura final da lente. Deve ser medida em ambos os olhos separadamente.</string>
    <string name="measurements3">2. Altura de Multifocal</string>
    <string name="tomada_de_medidas">Tomada de Medidas</string>
    <string name="measurements4">ALT - Altura Pupilar é a altura do centro da pupila até a base inferior da lente. É dela que depende a altura de montagem de um multifocal e a distribuição de seus campos de visão.</string>

    <!--    Lenses Fragment-->
    <string name="Lenses1">Lentes Fotossensível</string>
    <string name="Lenses2">Clareiam e escurecem de acordo com o ambiente e intensidade da luz solar. Em ambiente fechado parecem óculos de grau normais (lentes brancas), quando estão sendo usados em ambiente externo, parecem óculos de sol (lentes escuras).</string>
    <string name="Lenses3">Benefícios:</string>
    <string name="Lenses4"> - Repelem a radiação nociva dos raios solares, ajudando na manutenção da saúde da visão. <br />  - Oferecem mais conforto e segurança para a visão, mantendo os olhos protegidos ao máximo dos impactos dos raios UV.</string>
    <string name="Lenses5">Anti-Reflexo (AR)</string>
    <string name="Lenses6">Evita a fadiga ocular, aumentando seu conforto visual, é ideal para quem usa computador e óculos (tanto adultos quanto crianças) e muitas vezes sentem dores de cabeça, ardência, olhos vermelhos e etc.</string>
    <string name="Lenses7">- Eliminação quase total dos reflexos das superfícies da lente: os olhos são menos exigidos reduzindo assim o cansaço visual.<br /> - Melhor visualização: principalmente à noite e ao dirigir.<br /> - Grande durabilidade: ao aplicar o Anti-Reflexo nas suas lentes, elas recebem um tratamento endurecedor aumentando a sua resistência à riscos</string>

    <!--    Ametropia Fragment-->
    <string name="clique">Clique</string>
    <string name="as_informa_es">as informações</string>
    <string name="astigmatismo">Astigmatismo</string>
    <string name="hipermetropia">Hipermetropia</string>
    <string name="presbiopia">Presbiopia</string>

    <!--    Myopia Fragment-->
    <string name="myopia1">Dificuldade para enxergar objetos distantes e quanto mais longe o item estiver, mais difícil é o foco. <br /> Os olhos são mais longos que o normal, assim a imagem se forma antes da retina, gerando uma visão turva e desfocada para objetos distantes.</string>
    <string name="myopia2">Correção:</string>
    <string name="myopia3">Através de lentes negativas que são mais finas no centro e espessas nas bordas. <br /> <br /> Na receita de um cliente míope, seu valor dióptrico estará com um sinal negativo a frente.</string>

    <!--    Astigmatism Fragment-->
    <string name="astigmatism1">Dificuldade em enxergar em todas as distâncias se associa ao cansaço visual e à quantidade irregular de piscadas, além da dificuldade de leitura.</string>
    <string name="astigmatism2">A córnea possui um formato irregular, apresentando uma curvatura diferente, assim, os raios de luz não conseguem convergir e, portanto, não formam imagens focalizadas.</string>
    <string name="astigmatism3">Com uma lente tórica ou cilíndrica, essas curvas compensam a irregularidade da córnea. A espessura da lente não é a mesma em toda a sua superfície.</string>

    <!--    Hyperopia Fragment-->
    <string name="hyperopia1">Visão desfocada (embaçada) para objetos vistos de perto, enquanto que para objetos mais distantes os mesmos possuem visão nítida.</string>
    <string name="hyperopia2">Focalização da imagem depois da retina, isto é, os raios luminosos que incidem no olho refletidos de objetos próximos tendem a formar sua imagem depois da retina.</string>
    <string name="hyperopia3">O olho hipermétrope possui um comprimento axial menor e com isso a imagem chega a retina antes do foco se formar (foco depois da retina).</string>
    <string name="hyperopia4">É feita através de lentes convergentes (convexas), lentes positivas.</string>

    <!--    Presbyopia Fragment-->
    <string name="presbyopia1">Também chamada de vista cansada, trata-se da piora de visão normal que ocorre com o avançar da idade, quando os olhos lentamente perdem a capacidade de focalizar objetos muito próximos. Em geral começa aos 40 anos de idade e acaba acometendo todas as pessoas até os 50 anos em algum grau.</string>
    <string name="presbyopia2">Com o tempo, os músculos passam a não funcionar tão bem e o cristalino não se adaptada mais da melhor forma à focalização da imagem e a visão de perto acaba sendo prejudicada.</string>
    <string name="presbyopia3">Lentes corretoras multifocais, bifocais ou pelo uso de óculos para leitura. Na receita de um cliente presbita, terá valor dióptrico para perto.</string>
    <string name="presbyopia4">Presbiopia Orientação</string>
    <string name="presbyopia5">Pessoas com presbiopia que escolhe óculos visão simples, um para perto e um para longe, sempre orientá-los que:</string>
    <string name="presbyopia6">1. Os óculos de longe só terá nitidez na distância de longe. <br/> 2. Os óculos de perto só terá nitidez na distância de perto.</string>



</resources>