<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.PresbyopiaFragment"
    android:background="@color/pale_mauve_fff6fc">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/presbiopia"
                android:layout_gravity="center"
                android:textSize="22sp"
                android:textColor="@color/dark_pink_be2f83"
                android:fontFamily="@font/opensans_bold"
                android:layout_marginTop="35dp"/>

            <TextView
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/presbyopia1"
                android:textSize="18sp"
                android:fontFamily="@font/opensans_semi_bold"
                android:textColor="@color/dirty_purple_545253"/>

            <TextView
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/presbyopia2"
                android:textSize="18sp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/opensans_semi_bold"
                android:textColor="@color/dirty_purple_545253"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_semi_bold"
                android:text="@string/myopia2"
                android:textColor="@color/dark_pink_be2f83"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_semi_bold"
                android:layout_marginBottom="20dp"
                android:text="@string/presbyopia3"
                android:textColor="@color/dirty_purple_545253"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/presbyopia4"
                android:textColor="@color/dirty_purple_545253"
                android:textSize="18sp" />

            <TextView
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/presbyopia5"
                android:textSize="18sp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/opensans_semi_bold"
                android:textColor="@color/dirty_purple_545253"/>

            <TextView
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/presbyopia6"
                android:textSize="18sp"
                android:layout_marginBottom="50dp"
                android:fontFamily="@font/opensans_semi_bold"
                android:textColor="@color/dirty_purple_545253"/>




        </LinearLayout>


    </ScrollView>
</FrameLayout>