<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/people_emotions_and_pleasant_feelings_concept_beautiful_young_african_american_female_with_joyful_ex"
    android:orientation="vertical"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/logo_vis_o_do_bem"
        android:src="@drawable/visao_do_bem_logo_3" />

    <EditText
        android:id="@+id/email_login"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="43dp"
        android:autofillHints="@string/e_mail"
        android:background="@drawable/backgroud_edit_text_login"
        android:fontFamily="@font/opensans_regular"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:shadowColor="@color/pale_mauve"
        android:textColor="@color/pale_mauve"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="36dp"
        android:autofillHints="@string/senha"
        android:background="@drawable/backgroud_edit_text_login"
        android:fontFamily="@font/opensans_regular"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/dirty_purple"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="21dp">

        <Button
            android:id="@+id/enter_login"
            android:layout_width="151dp"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:background="@drawable/background_button_strong_pink"
            android:text="@string/entrar"
            android:textColor="@color/white" />

        <View
            android:layout_width="151dp"
            android:layout_height="43dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/background_button_shadow_light_pink" />


    </RelativeLayout>



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/signUp_login"
            android:layout_width="151dp"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:background="@drawable/background_button_strong_pink"
            android:text="@string/cadastrar"
            android:textColor="@color/white" />

        <View
            android:layout_width="151dp"
            android:layout_height="43dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/background_button_shadow_light_pink" />

    </RelativeLayout>


</LinearLayout>

