<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.ClientFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/pale_mauve_fff6fc">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="31dp"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/quem_o_a"
            android:textColor="@color/dirty_purple_545253"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/cliente_question"
            android:textColor="@color/dark_pink_be2f83"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/EditTextClientSearch"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_edit_text_white"
            android:hint="@string/buscar_por_nome_ou_data"
            android:paddingHorizontal="16dp" />

        <ListView
            android:id="@+id/listViewClient"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="63dp"
            tools:listitem="@layout/item_list_client"/>




    </LinearLayout>

</FrameLayout>